# Wdamm-FLOB2

./: README.md
AAa/: CSV.py  ROPEmodelTest.py  ROPEmodelTest2.py  env_test.py  extractor.py  mac_o1_results.json  mac_o1_results_final.json  mac_o1_results_patched.json  mac_o1_results_patched_debug.json  measure_mac_01.py  measure_mac_isolated_test.py  onlineTransformer.py  prompts.txt  simple_prompts.txt  test_models.py
ABCconjecture/: ABConjecture1.py  ABConjecture2.py  abcsweep.py
BSD/: BBC2.py  bbc.py
BellinsonConjecture/: 50CurveBlindSweep.py  admissibilty.py  analyticalClosure.py  blindTest.py  combReply.py  combReplyMIT.py  curve37.py  falsifiable1.py  falsifiable2.py  falsifiable3.py  falsifiable4.py  falsifiable5.py  falsifiable6.py  falsifiable7.py  falsifiable8.py  falsifiable9.py  generalizedMelllin.py  generalizedNodalIdentity.py  generalizedRegulatorMap.py  generalizedRegulatorReconstruction.py  generalizedSpectralFloor.py  hostileTest.py  isogeny.py  largeScaleSweep.py  marchenko37a1.py  master.py  normalization.py  proof.py  report.py  rigiditySweep.py  standardMath.py  standardMath2.py  superFalsifiable.py  superFalsifiable2.py  uftfCrossMotive.py  uftfMotivicResolver.py  zzz50Curves.py
COQ/: coqABC.txt  coqABC.v  coqAGI.txt  coqAGI.v  coqAincrad.txt  coqAincrad.v  coqAlpha.txt  coqAlpha.v  coqAlphaExplored.txt  coqAlphaExplored.v  coqArrowOFTime.txt  coqArrowOfTime.v  coqAxiomaticClosure.txt  coqAxiomaticClosure.v  coqBSD.txt  (+85 more)
securityDyanmic/cga_auth_demo/: README.md  demo.py  pyproject.toml
securityDyanmic/cga_auth_demo/cga_auth/: core.py
(+808 files in other folders)
