[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cga-auth-demo"
version = "0.1.0"
description = "CGA auth demo package (HMAC+counter pre-check primitive)"
authors = [{name = "Brendan Philip Lynch"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
